# EncryptedMessenger

./: .gitignore  CMakeLists.txt  main.cpp
include/: Broker.h  Encryption.h  Message.h  User.h
src/Core/: Broker.cpp  Encryption.cpp  Message.cpp  User.cpp
src/User/: User.cpp
src/common/: CMakeLists.txt
